Simpler queryset definition

--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -27,26 +27,8 @@
           ]
           - Free
         duration:
-          # Long duration low selectivity
-          - Pair: [
-              Uniform: { low: 1, high: 10000 },
-              Uniform: { low: 1, high: 10000 },
-          ]
-          # Short duration high selectivity
-          - Pair: [
-              Uniform: { low: 1, high: 100 },
-              Uniform: { low: 1, high: 100 },
-          ]
-          # Short duration low selectivity
-          - Pair: [
-              Uniform: { low: 1, high: 100 },
-              Uniform: { low: 1, high: 10000 },
-          ]
-          # Long duration high selectivity
-          - Pair: [
-              Uniform: { low: 1, high: 10000 },
-              Uniform: { low: 1, high: 100 },
-          ]
+          - Single:
+              Uniform: { low: 1, high: 10000 }
           - Free
 
   algorithms:
@@ -84,26 +66,8 @@
               Zipf: { n: 1000000000, beta: 1 }
           ]
         duration:
-          # Long duration low selectivity
-          - Pair: [
-              Uniform: { low: 1, high: 10000 },
-              Uniform: { low: 1, high: 10000 },
-          ]
-          # # Short duration high selectivity
-          # - Pair: [
-          #     Uniform: { low: 1, high: 100 },
-          #     Uniform: { low: 1, high: 100 },
-          # ]
-          # # Short duration low selectivity
-          # - Pair: [
-          #     Uniform: { low: 1, high: 100 },
-          #     Uniform: { low: 1, high: 10000 },
-          # ]
-          # # Long duration high selectivity
-          # - Pair: [
-          #     Uniform: { low: 1, high: 10000 },
-          #     Uniform: { low: 1, high: 100 },
-          # ]
+          - Single:
+              Uniform: { low: 1, high: 10000 }
 
   algorithms:
     - PeriodIndexPlusPlus:
