--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -64,9 +64,9 @@
     - GridFile:
         side_cells: [10, 100, 1000]
     - IntervalTree
-    # - PeriodIndexStar:
-    #     num_buckets: [32, 64, 128]
-    #     num_levels: [4, 8]
+    - PeriodIndexStar:
+        num_buckets: [32, 64, 128]
+        num_levels: [4, 8]
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
