Change the keys in the database
The database now is indexed using 64 bits integers, rather than
SHA256 values. This makes for a smaller dataset, and way faster joins.

--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -23,6 +23,5 @@
               Uniform: { low: 1, high: 94670777924 }
 
   algorithms:
-    - PeriodIndexStar:
-        num_buckets: [32, 64, 128]
-        num_levels: [4, 8]
+    - PeriodIndexPlusPlus:
+        page_size: [10]
