--- a/experiments/param_influence.yml
+++ b/experiments/param_influence.yml
@@ -26,7 +26,7 @@
           - Free
         duration:
           - Single:
-              Uniform: { low: 1, high: 10000 },
+              Uniform: { low: 1, high: 10000 }
           - Free
 
   algorithms:
