--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -8,6 +8,7 @@
         n: [10000]
         # Granularity of days, in minutes
         range:
+          - Free
           - Pair: 
               - Scaled: 
                   inner: {Uniform: { low: 1, high: 666 }}
@@ -18,6 +19,7 @@
                   scale: 1440
           
         duration:
+          - Free
           - Single: 
               # Up to one day, with granularity of hours
               Scaled:
@@ -44,6 +46,7 @@
         seed: [23512]
         n: [10000]
         range:
+          - Free
           # Granularity of minutes, in milliseconds
           - Pair:
               - Scaled:
@@ -54,6 +57,7 @@
                   inner: {Uniform: { low: 1, high: 31556925975 }}
                   scale: 60000
         duration:
+          - Free
           - Single: 
               # Duration ranges of up to 3 years, in milliseconds
               Uniform: { low: 1, high: 94670777924 }
@@ -78,12 +82,14 @@
         seed: [23512]
         n: [10000]
         range:
+          - Free
           - Pair: [
               Uniform: { low: 1, high: 2055 },
               # Durations up to one three months for the range queries, in days
               Uniform: { low: 1, high: 90 }
           ]
         duration:
+          - Free
           - Single: 
               # Duration ranges of up to two months, in days
               Uniform: { low: 1, high: 60 }
