--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -27,7 +27,7 @@
                 scale: 60
 
   algorithms:
-    - LinearScan
+    # - LinearScan
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
@@ -63,7 +63,7 @@
               Uniform: { low: 1, high: 94670777924 }
 
   algorithms:
-    - LinearScan
+    # - LinearScan
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
@@ -95,7 +95,7 @@
               Uniform: { low: 1, high: 60 }
 
   algorithms:
-    - LinearScan
+    # - LinearScan
     - BTree
     - GridFile:
         side_cells: [10, 100, 1000]
