--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -1,7 +1,10 @@
 ---
 
-- datasets:
-    # - Webkit
+- experiment_type: 
+    Focus:
+      samples: 100
+
+  datasets:
     - Random:
         seed: [123]
         n: 
@@ -21,33 +24,9 @@
               Uniform: { low: 1, high: 10000000 },
               Zipf: { n: 10000000, beta: 1 }
           ]
-          - Pair: [
-              Clustered: { n: 10, high: 10000000, std_dev: 100000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
-          - Free
         duration:
           - Single:
               Uniform: { low: 1, high: 10000 }
-          - Free
-
-    # - Random:
-    #     seed: [23512]
-    #     n: [10000]
-    #     range:
-    #       # Granularity of minutes, in milliseconds
-    #       - Pair:
-    #           - Scaled:
-    #               inner: {Uniform: { low: 1, high: 6980952 }}
-    #               scale: 60000
-    #           # Durations up to one year for the range queries, in milliseconds
-    #           - Scaled:
-    #               inner: {Uniform: { low: 1, high: 31556925975 }}
-    #               scale: 60000
-    #     duration:
-    #       - Single: 
-    #           # Duration ranges of up to 3 years, in milliseconds
-    #           Uniform: { low: 1, high: 94670777924 }
 
   algorithms:
     - PeriodIndexPlusPlus:
