--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -1,9 +1,7 @@
 ---
 
 - experiment_type: 
-    # Batch
-    Focus:
-      samples: 10
+    Batch
 
   datasets:
     - Random:
@@ -12,7 +10,6 @@
           - 10000000
         start_times:
           - Uniform: { low: 1, high: 10000000 }
-          - Clustered: { n: 10, high: 10000000, std_dev: 100000 }
         durations:
           - Zipf: { n: 10000000, beta: 1 }
 
@@ -32,6 +29,34 @@
   algorithms:
     - PeriodIndexPlusPlus:
         page_size: [10]
-    - PeriodIndexStar:
-        num_buckets: [10]
-        num_levels: [10]
+
+- experiment_type: 
+    Focus:
+      samples: 10
+
+  datasets:
+    - Random:
+        seed: [123]
+        n: 
+          - 10000000
+        start_times:
+          - Uniform: { low: 1, high: 10000000 }
+        durations:
+          - Zipf: { n: 10000000, beta: 1 }
+
+  queries:
+    - Random:
+        seed: [23512]
+        n: [5000]
+        range:
+          - Pair: [
+              Uniform: { low: 1, high: 10000000 },
+              Zipf: { n: 10000000, beta: 1 }
+          ]
+        duration:
+          - Single:
+              Uniform: { low: 1, high: 10000 }
+
+  algorithms:
+    - PeriodIndexPlusPlus:
+        page_size: [10]
