--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -28,35 +28,4 @@
 
   algorithms:
     - PeriodIndexPlusPlus:
-        page_size: [10]
-
-- mode: 
-    Focus:
-      samples: 10
-
-  datasets:
-    - Random:
-        seed: [123]
-        n: 
-          - 10000000
-        start_times:
-          - Uniform: { low: 1, high: 10000000 }
-        durations:
-          - Zipf: { n: 10000000, beta: 1 }
-
-  queries:
-    - Random:
-        seed: [23512]
-        n: [5000]
-        range:
-          - Pair: [
-              Uniform: { low: 1, high: 10000000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
-        duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
-
-  algorithms:
-    - PeriodIndexPlusPlus:
-        page_size: [10]
+        page_size: [10, 100]
