--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -41,7 +41,10 @@
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
-- datasets:
+- mode:
+    Batch
+
+  datasets:
     - Webkit
 
   queries:
@@ -77,7 +80,10 @@
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
-- datasets:
+- mode:
+    Batch
+
+  datasets:
     - Tourism
 
   queries:
