--- a/experiments/debug.yml
+++ b/experiments/debug.yml
@@ -1,7 +1,8 @@
 ---
 
 - mode: 
-    Batch
+    Focus:
+      samples: 10
 
   datasets:
     - Random:
@@ -14,18 +15,19 @@
           - Zipf: { n: 10000000, beta: 1 }
 
   queries:
-    - Random:
-        seed: [23512]
-        n: [5000]
-        range:
-          - Pair: [
-              Uniform: { low: 1, high: 10000000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
-        duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
+    - Systematic:
+        seed: [1234512]
+        n: [1024]
+        base:
+          Random:
+            seed: [123]
+            n: [10000000]
+            start_times:
+              - Uniform: { low: 1, high: 10000000 }
+            durations:
+              - Zipf: { n: 10000000, beta: 1 }
+
 
   algorithms:
     - PeriodIndexPlusPlus:
-        page_size: [10, 100]
+        page_size: [100]
