--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -36,8 +36,8 @@
         side_cells: [10, 100, 1000]
     - IntervalTree
     - PeriodIndexStar:
-        num_buckets: [32, 64, 128]
-        num_levels: [4, 8]
+        num_buckets: [32, 64, 128, 256, 512]
+        num_levels: [4, 8, 32, 64]
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
@@ -75,8 +75,8 @@
         side_cells: [10, 100, 1000]
     - IntervalTree
     - PeriodIndexStar:
-        num_buckets: [32, 64, 128]
-        num_levels: [4, 8]
+        num_buckets: [32, 64, 128, 256, 512]
+        num_levels: [4, 8, 16, 32]
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
@@ -111,8 +111,8 @@
         side_cells: [10, 100, 1000]
     - IntervalTree
     - PeriodIndexStar:
-        num_buckets: [32, 64, 128]
-        num_levels: [4, 8]
+        num_buckets: [32, 64, 128, 256, 512]
+        num_levels: [4, 8, 16, 32]
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
