--- a/experiments/scalability.yml
+++ b/experiments/scalability.yml
@@ -1,40 +1,248 @@
 ---
 
-# scalability experiments
+# # scalability experiments
+# - mode:
+#     Batch
+
+#   datasets:
+#     - Random:
+#         seed: [123]
+#         n: 
+#           - 1000000
+#           - 10000000
+#           - 100000000
+#           - 1000000000
+#         start_times:
+#           - Uniform: { low: 1, high: 1000000000 }
+#         durations:
+#           - Zipf: { n: 1000000000, beta: 1 }
+#   queries:
+#     - Random:
+#         seed: [23512]
+#         n: [5000, 20000]
+#         range:
+#           - Pair: [
+#               Uniform: { low: 1, high: 1000000000 },
+#               Zipf: { n: 1000000000, beta: 1 }
+#           ]
+#         duration:
+#           - Single:
+#               Uniform: { low: 1, high: 10000 }
+
+#   algorithms:
+#     - PeriodIndexPlusPlus:
+#         page_size: [100, 500, 1000, 50000, 10000, 100000, 1000000, 10000000]
+#     - BTree
+#     - GridFile:
+#         side_cells: [100, 1000, 10000]
+#     - PeriodIndexStar:
+#         num_buckets: [32, 64]
+#         num_levels: [4, 8]
+
+########################################################################
+#
+# Flights
+#
+# - mode:
+#     Batch
+
+#   datasets:
+#     - Flight
+
+#   queries:
+#     - Random:
+#         seed: [23512]
+#         n: [10000]
+#         # Granularity of days, in minutes
+#         range:
+#           - Pair: 
+#               - Scaled: 
+#                   inner: {Uniform: { low: 1, high: 666 }}
+#                   scale: 1440
+#               # Up to three months
+#               - Scaled:
+#                   inner: {Uniform: { low: 1, high: 2160 }}
+#                   scale: 1440
+          
+#         duration:
+#           - Single: 
+#               # Up to one day, with granularity of minutes
+#               Scaled:
+#                 inner: {Uniform: { low: 1, high: 1140 }}
+#                 scale: 1
+
+#   algorithms:
+#     - BTree
+#     - GridFile:
+#         side_cells: [10, 100, 1000]
+#     - IntervalTree
+#     - PeriodIndexStar:
+#         num_buckets: [32, 64]
+#         num_levels: [4, 8]
+#     - PeriodIndexPlusPlus:
+#         page_size: [100, 200, 1000]
+
 - mode:
     Batch
 
   datasets:
-    - Random:
-        seed: [123]
-        n: 
-          - 1000000
-          - 10000000
-          - 100000000
-          - 1000000000
-        start_times:
-          - Uniform: { low: 1, high: 1000000000 }
-        durations:
-          - Zipf: { n: 1000000000, beta: 1 }
+    - Reiterated:
+        base: Flight
+        copies: 10
+
   queries:
     - Random:
         seed: [23512]
-        n: [5000, 20000]
+        n: [10000]
+        # Granularity of days, in minutes
         range:
-          - Pair: [
-              Uniform: { low: 1, high: 1000000000 },
-              Zipf: { n: 1000000000, beta: 1 }
-          ]
+          - Pair: 
+              - Scaled: 
+                  inner: {Uniform: { low: 1, high: 6660 }}
+                  scale: 1440
+              # Up to three months
+              - Scaled:
+                  inner: {Uniform: { low: 1, high: 2160 }}
+                  scale: 1440
+          
         duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
+          - Single: 
+              # Up to one day, with granularity of minutes
+              Scaled:
+                inner: {Uniform: { low: 1, high: 1140 }}
+                scale: 1
 
   algorithms:
-    - PeriodIndexPlusPlus:
-        page_size: [100, 500, 1000, 50000, 10000, 100000, 1000000, 10000000]
     - BTree
     - GridFile:
-        side_cells: [100, 1000, 10000]
+        side_cells: [10, 100, 1000]
+    - IntervalTree
     - PeriodIndexStar:
         num_buckets: [32, 64]
         num_levels: [4, 8]
+    - PeriodIndexPlusPlus:
+        page_size: [100, 200, 1000]
+
+- mode:
+    Batch
+
+  datasets:
+    - Reiterated:
+        base: Flight
+        copies: 100
+
+  queries:
+    - Random:
+        seed: [23512]
+        n: [10000]
+        # Granularity of days, in minutes
+        range:
+          - Pair: 
+              - Scaled: 
+                  inner: {Uniform: { low: 1, high: 66600 }}
+                  scale: 1440
+              # Up to three months
+              - Scaled:
+                  inner: {Uniform: { low: 1, high: 2160 }}
+                  scale: 1440
+          
+        duration:
+          - Single: 
+              # Up to one day, with granularity of minutes
+              Scaled:
+                inner: {Uniform: { low: 1, high: 1140 }}
+                scale: 1
+
+  algorithms:
+    - BTree
+    - GridFile:
+        side_cells: [10, 100, 1000]
+    - IntervalTree
+    - PeriodIndexStar:
+        num_buckets: [32, 64]
+        num_levels: [4, 8]
+    - PeriodIndexPlusPlus:
+        page_size: [100, 200, 1000]
+
+- mode:
+    Batch
+
+  datasets:
+    - Reiterated:
+        base: Flight
+        copies: 1000
+
+  queries:
+    - Random:
+        seed: [23512]
+        n: [10000]
+        # Granularity of days, in minutes
+        range:
+          - Pair: 
+              - Scaled: 
+                  inner: {Uniform: { low: 1, high: 666000 }}
+                  scale: 1440
+              # Up to three months
+              - Scaled:
+                  inner: {Uniform: { low: 1, high: 2160 }}
+                  scale: 1440
+          
+        duration:
+          - Single: 
+              # Up to one day, with granularity of minutes
+              Scaled:
+                inner: {Uniform: { low: 1, high: 1140 }}
+                scale: 1
+
+  algorithms:
+    - BTree
+    - GridFile:
+        side_cells: [10, 100, 1000]
+    - IntervalTree
+    - PeriodIndexStar:
+        num_buckets: [32, 64]
+        num_levels: [4, 8]
+    - PeriodIndexPlusPlus:
+        page_size: [100, 200, 1000]
+
+- mode:
+    Batch
+
+  datasets:
+    - Reiterated:
+        base: Flight
+        copies: 10000
+
+  queries:
+    - Random:
+        seed: [23512]
+        n: [10000]
+        # Granularity of days, in minutes
+        range:
+          - Pair: 
+              - Scaled: 
+                  inner: {Uniform: { low: 1, high: 6660000 }}
+                  scale: 1440
+              # Up to three months
+              - Scaled:
+                  inner: {Uniform: { low: 1, high: 2160 }}
+                  scale: 1440
+          
+        duration:
+          - Single: 
+              # Up to one day, with granularity of minutes
+              Scaled:
+                inner: {Uniform: { low: 1, high: 1140 }}
+                scale: 1
+
+  algorithms:
+    - BTree
+    - GridFile:
+        side_cells: [10, 100, 1000]
+    - IntervalTree
+    - PeriodIndexStar:
+        num_buckets: [32, 64]
+        num_levels: [4, 8]
+    - PeriodIndexPlusPlus:
+        page_size: [100, 200, 1000]
+
