--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -44,5 +44,8 @@
         num_levels: [4, 8]
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
+    - RDIndex:
+        dimension_order: [TimeDuration, DurationTime]
+        page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
 
