--- a/experiments/param_influence.yml
+++ b/experiments/param_influence.yml
@@ -33,5 +33,8 @@
           - Free
 
   algorithms:
+    - RDIndex:
+        dimension_order: [TimeDuration, DurationTime]
+        page_size: [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]
     - PeriodIndexPlusPlus:
         page_size: [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]
