--- a/experiments/real-world.yml
+++ b/experiments/real-world.yml
@@ -40,6 +40,9 @@
         num_levels: [4, 8, 32, 64]
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
+    - RDIndex:
+        dimension_order: [TimeDuration, DurationTime]
+        page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
 - mode:
     Batch
@@ -79,6 +82,9 @@
         num_levels: [4, 8, 16, 32]
     - PeriodIndexPlusPlus:
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
+    - RDIndex:
+        dimension_order: [TimeDuration, DurationTime]
+        page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
 - mode:
     Batch
@@ -114,6 +120,9 @@
         num_buckets: [32, 64, 128, 256, 512]
         num_levels: [4, 8, 16, 32]
     - PeriodIndexPlusPlus:
+        page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
+    - RDIndex:
+        dimension_order: [TimeDuration, DurationTime]
         page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
 
 
