🧪 Change the distribution of start times/durations
In the study of parameter influcence, use zipf distributed start times
and uniform durations, to test the influence of the two dimension
orderings

--- a/experiments/param_influence.yml
+++ b/experiments/param_influence.yml
@@ -7,15 +7,18 @@
   datasets:
     - Random:
         seed: [123]
-        n: 
-          - 1000000
-          - 10000000
-          - 100000000
+        n: [10000000]
         start_times:
           - Uniform: { low: 1, high: 10000000 }
-          - Clustered: { n: 10, high: 10000000, std_dev: 100000 }
         durations:
           - Zipf: { n: 10000000, beta: 1 }
+    - Random:
+        seed: [123]
+        n: [10000000]
+        start_times:
+          - Zipf: { n: 10000000, beta: 1 }
+        durations:
+          - Uniform: { low: 1, high: 10000000 }
 
   queries:
     - Random:
