--- a/experiments/param_influence.yml
+++ b/experiments/param_influence.yml
@@ -12,13 +12,6 @@
           - Uniform: { low: 1, high: 10000000 }
         durations:
           - Zipf: { n: 10000000, beta: 1 }
-    - Random:
-        seed: [123]
-        n: [10000000]
-        start_times:
-          - Zipf: { n: 10000000, beta: 1 }
-        durations:
-          - Uniform: { low: 1, high: 10000000 }
 
   queries:
     - Random:
@@ -39,5 +32,35 @@
     - RDIndex:
         dimension_order: [TimeDuration, DurationTime]
         page_size: [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]
-    - PeriodIndexPlusPlus:
+
+- mode:
+    Batch
+
+  datasets:
+    - Random:
+        seed: [123]
+        n: [10000000]
+        start_times:
+          - Zipf: { n: 10000000, beta: 1 }
+        durations:
+          - Uniform: { low: 1, high: 10000000 }
+
+  queries:
+    - Random:
+        seed: [23512]
+        n: [20000]
+        range:
+          - Pair: [
+              Zipf: { n: 10000000, beta: 1 }
+              Uniform: { low: 1, high: 10000000 },
+          ]
+          - Free
+        duration:
+          - Single:
+              Uniform: { low: 1, high: 10000 }
+          - Free
+
+  algorithms:
+    - RDIndex:
+        dimension_order: [TimeDuration, DurationTime]
         page_size: [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]
