--- a/experiments/param_influence.yml
+++ b/experiments/param_influence.yml
@@ -12,31 +12,6 @@
           - Uniform: { low: 1, high: 10000000 }
         durations:
           - Zipf: { n: 10000000, beta: 1 }
-
-  queries:
-    - Random:
-        seed: [23512]
-        n: [20000]
-        range:
-          - Pair: [
-              Uniform: { low: 1, high: 10000000 },
-              Zipf: { n: 10000000, beta: 1 }
-          ]
-          - Free
-        duration:
-          - Single:
-              Uniform: { low: 1, high: 10000 }
-          - Free
-
-  algorithms:
-    - RDIndex:
-        dimension_order: [TimeDuration, DurationTime]
-        page_size: [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]
-
-- mode:
-    Batch
-
-  datasets:
     - Random:
         seed: [123]
         n: [10000000]
@@ -51,7 +26,7 @@
         n: [20000]
         range:
           - Pair: [
-              Zipf: { n: 10000000, beta: 1 },
+              Uniform: { low: 1, high: 10000000 },
               Uniform: { low: 1, high: 10000000 }
           ]
           - Free
@@ -63,4 +38,4 @@
   algorithms:
     - RDIndex:
         dimension_order: [TimeDuration, DurationTime]
-        page_size: [10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500, 600, 700, 800, 900, 1000]
+        page_size: [10, 50, 100, 500, 1000]
