Fix bug in the query code

--- a/experiments/all.yml
+++ b/experiments/all.yml
@@ -42,10 +42,8 @@
     - PeriodIndexStar:
         num_buckets: [32, 64, 128]
         num_levels: [4, 8]
-    - PeriodIndexPlusPlus:
-        page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
     - RDIndex:
         dimension_order: [TimeDuration, DurationTime]
-        page_size: [5, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 200, 300, 400, 500]
+        page_size: [10, 50, 100, 500]
 
 
